...
    >
      {/* 首页Tab */}
      <Tab.Screen
        name="FAHomeTab"
        component={FAHomeStackNavigator}
        options={{
          title: "首页",
          tabBarIcon: ({ color, size }) => (
            <Icon source="home" size={size} color={color} />
          ),
        }}
      />

...

      {/* 管理Tab */}
      <Tab.Screen
        name="FAManagementTab"
        component={FAManagementStackNavigator}
        options={{
          title: "管理",
          tabBarIcon: ({ color, size }) => (
            <Icon source="cog" size={size} color={color} />
          ),
        }}
      />

...
